[gd_scene load_steps=2 format=3 uid="uid://bm8x0y1r8jlqf"]

[ext_resource type="Script" path="res://Tests/blue_dice_debug_test.gd" id="1_j8kx2"]

[node name="BlueDiceDebugTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j8kx2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Blue Dice Debug Test"
horizontal_alignment = 1

[node name="ForceBlueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Test Force All Blue"

[node name="TestProbabilityButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Test Blue Probability"

[node name="RollDiceButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Roll Dice and Check Colors"

[node name="TestOutput" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true